--- a/locale/es_ES.po
+++ b/locale/es_ES.po
@@ -2,6 +2,6 @@
 msgid ""
 msgstr "Content-Type: text/plain; charset=utf-8\n"
 
-msgctxt "field:party.configuration,default_country:"
-msgid "Default Country"
-msgstr "País por defecto"
+msgctxt "field:party.configuration,party_country:"
+msgid "Party Country"
+msgstr "País del tercero"
